--- a/public/css/miningStyle.css
+++ b/public/css/miningStyle.css
@@ -1,20 +1,33 @@
 body{
     background-color: white;
     height:800px;
+    font-family: IRANSans;
 }
 .left{
     border:solid 1px rgba(254, 254, 254, 1);
     height:300px;
-    margin-top:13%;
+    margin-top:170px;
     width:60%;
     margin-left:5%;
 }
 .right{
-    background-color: lightgray;
-    height:600px;
+    background-color:rgba(254, 254, 254, 1);
+    height:450px;
     margin-left:5%;
     padding:0px !important;
     border:solid 1px lightgray;
+}
+.secondHeader{
+    position: relative;
+    bottom:140px;
+
+}
+.font{
+    font-size:65%;
+}
+input{
+    width:80%;
+    height:30px !important;
 }
 .right-header{
     background:white;
@@ -29,29 +42,50 @@ body{
     height:78%;
     text-align:center;
 }
+.input-group-width{
+    width:80%;
+    margin:auto;
+}
+.inpGroupTxt{
+    background-color:rgba(238,238,238,1);
+}
 .left-1{
-    height:73px;
-    border:solid 1px lightgray;
+    height:45px;
     background:white;
-    border-radius:10px;
     margin-top:1%;
 }
 .first{
     width:33.3%;
-    background:rgba(64,180,136,1);
-    border-radius:10px 0 0 10px;
-}
-.first-main{
-    background-color: rgba(36,141,101,1);
-    width:20%;
-    height:25%;
-    margin-top:20%;
-    border-radius:0 10px 0 10px;
+    background:rgba(245,245,245,1);
 }
 .second{
     width:33.3%;
+    background:rgba(245,245,245,1);
 }
 .third{
     width:33.3%;
-    border-left:solid 1px lightgray
+    border-left:solid 1px white;
+    background-color:rgba(232,232,232,1);
+}
+.bottom{
+    height:200px !important;
+}
+.price_color{
+    color:rgba(43,156,118,1);
+    font-size:25px;
+}
+.price{
+    font-size:13px;
+}
+.dir_rtl{
+    direction:rtl;
+}
+.colorLightGray{
+    color:#b5b0b0;
+}
+.font-small{
+    font-size:12px;
+}
+.font-10{
+    font-size:10px;
 }
