--- a/public/css/mediaMining.css
+++ b/public/css/mediaMining.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width:425px) and (max-width:800px) {
+@media only screen and (min-width:426px) and (max-width:768px) {
     h1 {
         font-size: 30px !important;
     }
@@ -7,7 +7,8 @@
         height: 300px;
         margin-top: 140px !important;
         width: 60%;
-        margin-left: 5%;
+        /* margin-left: 5%; */
+        margin-right:17px !important;
     }
     .secondHeader {
         position: relative;
@@ -21,35 +22,82 @@
     }
     .hashRateEng{
         font-size:13px !important;
+        margin-left:22px !important;
+        top:22px !important;
     }
 }
-@media only screen and (min-width:375px){
+@media only screen and (min-width:375px) and (max-width:425px){
     h1{
         font-size:28px !important;
+    }
+    .hashRateEng{
+        margin-left:36px !important;
     }
     .third{
         font-size:13px !important;
     }
+    .secondHeader{
+        bottom:90px !important;
+    }
     .price{
         position: relative;
-        left:20px;
+        left:0px;
+    }
+    .right-left{
+        margin-left:10px !important;
+        margin-right:10px !important;
+    }
+    .left{
+        width:100% !important;
+        margin-top:159px !important;
+        margin-right:0px !important;
+    }
+    .right{
+      margin-right:0px !important;
+    }
+    .myText{
+        text-align:center !important;
+    }
+    .bottom{
+        border-bottom:solid 1px lightgray;
+        padding-top:10px !important;
+        padding-bottom:10px !important;
     }
 }
-@media only screen and (min-width:320px) and (max-width:360px){
+@media only screen and (min-width:320px) and (max-width:374px){
     h1{
         font-size:24px !important;
     }
     .left{
         margin-top:159px !important;
+        width:100% !important;
+        margin-right:0px !important;
+    }
+    .right{
+        margin-right:0px !important;
+    }
+    hr{
+        display: block !important;
+    }
+    .right-body{
+        height: 76% !important;
+    }
+    .myText{
+        text-align:center !important;
+    }
+    .bottom{
+        border-bottom:solid 1px lightgray;
+        padding-top:10px !important;
+    }
+    .right-left{
+        margin-left:10px !important;
+        margin-right:10px !important;
     }
     .secondHeader{
         bottom:72px !important;
     }
     .third{
         font-size:12px !important;
-    }
-    .left{
-        margin-top:88px !important;
     }
     .price_color{
         color:rgba(43,156,118,1);
@@ -63,5 +111,8 @@
     }
     .hashRateEng{
         font-size:12px !important;
+        margin-left:32px !important;
+        position: relative;
+        top:17px;
     }
 }
