--- a/public/css/miningStyle.css
+++ b/public/css/miningStyle.css
@@ -6,16 +6,65 @@ body{
 .left{
     border:solid 1px rgba(254, 254, 254, 1);
     height:300px;
-    margin-top:170px;
+    margin-top:159px;
     width:60%;
-    margin-left:5%;
+    margin-right:35px;
+    /* margin-left:5%; */
+}
+.hashRateEng{
+  text-align:left;
+  margin-left:10%;
+  position:relative;
+  top:28px;
+}
+.hashRate{
+    text-align:right;
+    margin-right:10%;
+}
+.powerEng{
+    margin-left:10%;
+}
+.powerFa{
+   margin-right:10%;
+   position: relative;
+   bottom:15px;
+}
+.costEng{
+    margin-left:10%;
+    position: relative;
+    top:20px;
+}
+.costFa{
+    margin-right:10%;
+    position: relative;
+    bottom:13px;
+}
+.poolEng{
+   margin-left:10%;
+}
+.pos-1{
+    position: relative;
+    bottom:37px;
+}
+.poolFa{
+  margin-right:10%;
+  position: relative;
+  bottom:31px;
+}
+.pos{
+    position: relative;
+    bottom:20px;
 }
 .right{
     background-color:rgba(254, 254, 254, 1);
     height:450px;
-    margin-left:5%;
+    /* margin-left:5%; */
     padding:0px !important;
     border:solid 1px lightgray;
+    margin-right:20px;
+}
+.dir-rtl{
+    direction:rtl !important;
 }
 .secondHeader{
     position: relative;
@@ -39,12 +88,16 @@ input{
 }
 .right-body{
     background-color:rgba(245,245,245,1);
-    height:78%;
+    height:76%;
     text-align:center;
+    direction:ltr !important;
 }
 .input-group-width{
     width:80%;
     margin:auto;
+}
+.display-none{
+    display: none;
 }
 .inpGroupTxt{
     background-color:rgba(238,238,238,1);
@@ -53,6 +106,7 @@ input{
     height:45px;
     background:white;
     margin-top:1%;
+    direction:ltr !important;
 }
 .first{
     width:33.3%;
@@ -69,6 +123,13 @@ input{
 }
 .bottom{
     height:200px !important;
+}
+.lastBottom{
+    height:200px !important;
+
+}
+.myText{
+    text-align:right;
 }
 .price_color{
     color:rgba(43,156,118,1);
