--- a/public/css/mediaMining.css
+++ b/public/css/mediaMining.css
@@ -14,6 +14,9 @@
         position: relative;
         bottom: 116px;
     }
+    .costEng{
+        display: none !important;
+    }
     .third{
         font-size:13px !important;
     }
