--- a/public/css/mediaMining.css
+++ b/public/css/mediaMining.css
@@ -1,62 +1,30 @@
-@media only screen and (min-width:426px) and (max-width:768px) {
-    h1 {
-        font-size: 30px !important;
-    }
-    .left {
-        border: solid 1px rgba(254, 254, 254, 1);
-        height: 300px;
-        margin-top: 140px !important;
-        width: 60%;
-        /* margin-left: 5%; */
-        margin-right:17px !important;
-    }
-    .secondHeader {
-        position: relative;
-        bottom: 116px;
-    }
+@media only screen and (min-width:576px) and (max-width:768px){
     .costEng{
         display: none !important;
     }
-    .third{
-        font-size:13px !important;
+    .font-10{
+        font-size:10px !important;
     }
-    .hashRate{
-        font-size:12px !important;
+    .margin-36{
+        margin-top:36px !important;
     }
-    .hashRateEng{
-        font-size:13px !important;
-        margin-left:22px !important;
-        top:22px !important;
+    .input-group{
+        margin-top:10px !important;
     }
-}
-@media only screen and (min-width:375px) and (max-width:425px){
-    h1{
-        font-size:28px !important;
-    }
-    .hashRateEng{
-        margin-left:36px !important;
-    }
-    .third{
-        font-size:13px !important;
-    }
-    .secondHeader{
-        bottom:90px !important;
-    }
-    .price{
+    .poolEng{
         position: relative;
-        left:0px;
+        bottom:5px !important;
     }
-    .right-left{
-        margin-left:10px !important;
-        margin-right:10px !important;
+    .btn-group{
+       width:90% !important;
     }
     .left{
-        width:100% !important;
-        margin-top:159px !important;
-        margin-right:0px !important;
+        margin-right:8px !important;
     }
-    .right{
-      margin-right:0px !important;
+}
+@media only screen and (min-width:426px) and (max-width:575px){
+    hr{
+        display: block !important;
     }
     .myText{
         text-align:center !important;
@@ -64,10 +32,21 @@
     .bottom{
         border-bottom:solid 1px lightgray;
         padding-top:10px !important;
-        padding-bottom:10px !important;
     }
+    .lastBottom{
+        padding-top:10px !important;
+    }
+    .right-left{
+       margin-right:10px !important;
+       margin-left:10px !important;
+    }
+    .right{
+        margin:0px !important;
+    }
+
 }
-@media only screen and (min-width:320px) and (max-width:374px){
+@media only screen and (min-width:320px) and (max-width:425px){
+
     h1{
         font-size:24px !important;
     }
@@ -82,9 +61,6 @@
     hr{
         display: block !important;
     }
-    .right-body{
-        height: 76% !important;
-    }
     .myText{
         text-align:center !important;
     }
@@ -92,9 +68,12 @@
         border-bottom:solid 1px lightgray;
         padding-top:10px !important;
     }
+    .lastBottom{
+        padding-top:10px !important;
+    }
     .right-left{
-        margin-left:10px !important;
-        margin-right:10px !important;
+       margin-right:10px !important;
+       margin-left:10px !important;
     }
     .secondHeader{
         bottom:72px !important;
@@ -113,9 +92,6 @@
         font-size:11px !important;
     }
     .hashRateEng{
-        font-size:12px !important;
-        margin-left:32px !important;
-        position: relative;
-        top:17px;
+        top:19px;
     }
 }
