--- a/public/css/mediaWelcome.css
+++ b/public/css/mediaWelcome.css
@@ -1,5 +1,13 @@
-@media only screen and (min-width:320px) and (max-width:425px){
+@media only screen and (min-width:320px) and (max-width:568px){
     .mainInp{
         width:100% !important;
+    }
+    .main{
+        width:94% !important;
+    }
+}
+@media only screen and (min-width:569px) and (max-width:900px){
+    .mainInp{
+        width:70% !important;
     }
 }
