--- a/public/css/mediaMining.css
+++ b/public/css/mediaMining.css
@@ -6,6 +6,9 @@
      .secondHeader{
          margin-top:50px !important;
      }
+     .secondFoot{
+         margin-top:83px !important;
+     }
 }
 @media only screen and (min-width:426px) and (max-width:575px){
     hr{
