--- a/public/css/miningStyle.css
+++ b/public/css/miningStyle.css
@@ -6,7 +6,7 @@ body{
 .left{
     border:solid 1px rgba(254, 254, 254, 1);
     height:300px;
-    margin-top:159px;
+    margin-top:90px;
     width:60%;
     margin-right:17px;
     /* margin-left:5%; */
@@ -17,6 +17,8 @@ body{
     position: relative;
     top: 22px;
 }
+
+
 .hashRate{
     text-align:right;
     margin-right:6%;
@@ -73,8 +75,7 @@ body{
 }
 .secondHeader{
     position: relative;
-    bottom:140px;
-
+    bottom:89px;
 }
 .font{
     font-size:65%;
@@ -128,12 +129,10 @@ button.btn.dropdown-toggle.btn-default::after{
     direction:ltr !important;
 }
 .first{
-    width:33.3%;
+    width:66.6%;
     background:rgba(245,245,245,1);
-}
-.second{
-    width:33.3%;
-    background:rgba(245,245,245,1);
+    padding-top:10px;
+    padding-right:10px;
 }
 .third{
     width:33.3%;
@@ -151,7 +150,7 @@ button.btn.dropdown-toggle.btn-default::after{
     text-align:right;
 }
 .price_color{
-    color:rgba(43,156,118,1);
+    color:#0cb983;
     font-size:25px;
 }
 .price{
